remove content-visibility css prop to avoid jumpy scrollbar (#10503)

--- a/packages/notebook/style/base.css
+++ b/packages/notebook/style/base.css
@@ -143,14 +143,6 @@
 }
 
 /*-----------------------------------------------------------------------------
-| Notebook cell
-|----------------------------------------------------------------------------*/
-
-.jp-Notebook-cell {
-  content-visibility: auto;
-}
-
-/*-----------------------------------------------------------------------------
 | Notebook drag and drop
 |----------------------------------------------------------------------------*/
 
